--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  margin:0px;
+  padding: 0px;
+}
+.nav-bar{
+  text-align: center;
+  color: blueviolet;
+  height: 100px;
+  line-height: 100px;
+  border:1px solid black;
+}
+h2{
+  
+}
+h3{
+  font-size:20px;
+}
+p{
+  height: 60px;
+  background-color: powderblue;
+}
+.post_list{
+  width: 95vw;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.post_wrapper{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+	flex-direction: column;
+	width: 320px;
+  height: auto;
+	margin: 20px;
+	text-align: center;
+	align-items: center;
+}
+.postitem_image{
+  width: 320px;
+  height: 240px;
+}
