--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,41 +13,70 @@ code {
     monospace;
 }
 *{
+  background-color: #E5E5E5;
   margin:0px;
   padding: 0px;
 }
 .nav-bar{
+  font-family: 'Oswald', sans-serif;
   text-align: center;
   color: blueviolet;
   height: 100px;
   line-height: 100px;
   border:1px solid black;
 }
-h2{
-  
+
+.post_wrapper{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.12);
+  display: flex;
+	flex-direction: column;
+	width: 320px;
+  height: auto;
+	margin: 20px;
+  justify-content: flex-start;
+  background-color:white;
 }
 h3{
-  font-size:20px;
+  padding: 5px 20px 5px 0px;
+  text-indent: 15px;
+  border-left: 5px solid #FCA311;
+  color: #14213D;
+  font-size:24px;
+  height: 40px;
+  line-height: 40px;
+  font-family: 'Oswald', sans-serif;
 }
 p{
-  height: 60px;
-  background-color: powderblue;
+  border-left: 5px solid #7D8391;
+  padding: 10px 20px 15px 20px;
+  height: auto;
+  font-size: 15px;
+}
+.author{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 35px;
+  border-left: 5px solid #14213D;
+}
+.author_ava{
+  margin-left: 15px;
+  border: 1px solid #E5E5E5;
+  border-radius: 50%;
+  width: 30px;
+  height: auto;
+}
+h4{
+  color: black;
+  font-size: 13px;
+  font-weight: 200;
+  text-indent: 8px;
 }
 .post_list{
   width: 95vw;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-}
-.post_wrapper{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  display: flex;
-	flex-direction: column;
-	width: 320px;
-  height: auto;
-	margin: 20px;
-	text-align: center;
-	align-items: center;
 }
 .postitem_image{
   width: 320px;
