--- a/src/index.css
+++ b/src/index.css
@@ -17,19 +17,30 @@ code {
   margin:0px;
   padding: 0px;
 }
-h2{
-  font-size: 35px;
-  background:#14213D;
-}
+
 .nav-bar{
   font-family: 'Oswald', sans-serif;
-  text-align:center;
+  justify-content: flex-start;
   color:#FCA311;
   height: 100px;
   line-height: 100px;
   border-bottom:  solid black;
   width: 95vw;
   margin:auto;
+  background:#14213D;
+}
+h2{
+  text-indent: 50px;
+  background-color: inherit;
+  font-size: 35px;
+  float:left;
+  width: 70vw;
+}
+.nav-bar>a{
+  background-color: inherit;
+  color:inherit;
+  font-size: 20px;
+  justify-content: space-around;
 }
 .inside{
   margin: auto;
@@ -179,4 +190,35 @@ a{
     font-size: 13px;
     padding: 10px 20px 30px 20px ;
   }
+}
+form{
+  box-sizing: border-box;
+  padding:50px 0px;
+  margin: auto;
+  width:70vw;
+  padding-bottom: 150px;
+}
+form > h3{
+  width:100%;
+  border:none ;
+  text-indent: none;
+  text-align: center;
+}
+input{
+  padding-left: 15px;
+  display: block;
+  width:100%;
+  height:50px;
+}
+label{
+  font-style: 'Oswald', sans-serif;
+  display:block;
+  margin:20px  0px;
+}
+
+button{
+  margin-top: 50px;
+  width:150px;
+  float:right;
+  height: 35px;
 }
