--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 body {
-  margin: 0;
+  margin:0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -16,35 +16,57 @@ code {
   background-color: #E5E5E5;
   margin:0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 
 .nav-bar{
   font-family: 'Oswald', sans-serif;
   justify-content: flex-start;
-  color:#FCA311;
   height: 100px;
   line-height: 100px;
-  border-bottom:  solid black;
   width: 95vw;
   margin:auto;
   background:#14213D;
 }
-h2{
-  text-indent: 50px;
-  background-color: inherit;
+.nav-bar > ul {
+  display:flex;
+  flex-direction: row;
+  background:#14213D;
+}
+li{
+  background:#14213D ;
+  list-style: none;
+  width:50vw;
+  height: 100px;
+}
+li>a{
+  padding-left: 20px;
+  background: inherit;
+  color:#FCA311;
   font-size: 35px;
-  float:left;
-  width: 70vw;
 }
-.nav-bar>a{
-  background-color: inherit;
-  color:inherit;
-  font-size: 20px;
-  justify-content: space-around;
+.create-post{
+  font-size: 25px;
+  float:right;
+  padding-right: 10px;
 }
-.inside{
-  margin: auto;
+.body-page{
+  width: 95vw;
+  margin: 20px auto;
+  margin-bottom: 0px;
 }
+.search-class{
+  float:right;
+  margin-top: 10px;
+  height:40px;
+}
+.searching{
+  border:2px solid #14213D;
+  padding-left: 20px;
+  width:350px;
+  height: 40px;
+}
+
 .post_wrapper{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.12);
   display: flex;
@@ -54,15 +76,14 @@ h2{
   background-color:white;
 }
 
-h3{
-  padding: 5px 20px 5px 0px;
-  text-indent: 15px;
+.postitem_title{
+  text-indent: 20px;
   border-left: 5px solid #FCA311;
   color: #14213D;
-  font-size:24px;
-  height: 40px;
-  line-height: 40px;
+  font-size: 24px;
   font-family: 'Oswald', sans-serif;
+  padding-top: 5px;
+  padding-bottom:5px;
 }
 .post_wrapper > p{
   border-left: 5px solid #14213D;
@@ -84,7 +105,7 @@ h3{
   width: 30px;
   height: auto;
 }
- h4{
+h4{
   color: black;
   font-size: 13px;
   font-weight: 200;
@@ -92,7 +113,7 @@ h3{
 }
 .post_list{
   width: 95vw;
-  margin: auto;
+  margin:50px auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -117,23 +138,25 @@ a{
   overflow: hidden;
   border: none;
 }
-.post-detail-wrapper >img{
-  width: 100%;
+.post-detail-wrapper .img-bg{
+  height: 400px;
+  position: relative;
 }
-.post-detail-wrapper > h3{
-  justify-content: flex-start;
-  text-indent: 50px;
-  padding-top: 20px;
-  height: 80px;
-  line-height: inherit;
+.post-detail-title{
+  font-family: 'Oswald', sans-serif;
+  padding-top:15px ;
+  padding-left:50px ;
+  height: fit-content;
   font-size: 50px;
-  border:none;
+  height: fit-content;
+  border: none;
+  color:#14213D;
 }
 .post-detail-author{
   display: flex;
   flex-direction: row;
-  height: 40px;
-  padding: 15px 10px 15px 50px;
+  height: fit-content;
+  padding: 20px 10px 15px 50px;
 }
 .post-detail-author > img{
   float:left;
@@ -166,14 +189,16 @@ a{
   .post-detail-wrapper > p{
     font-size: 20px;
   }
-
+  form{
+    width:60vw;
+  }
 }
 @media only screen and (max-width: 600px) {
-  .post-detail-wrapper > h3{
+  .post-detail-title{
+    padding-left: 20px;
     padding-top: 0px;
     font-size: 35px;
     height: 56px;
-    text-indent: 20px;
   }
   .post-detail-author > h4{
     font-size: 12px;
@@ -190,35 +215,97 @@ a{
     font-size: 13px;
     padding: 10px 20px 30px 20px ;
   }
+  form{
+    width:80vw;
+  }
 }
+
 form{
-  box-sizing: border-box;
-  padding:50px 0px;
-  margin: auto;
-  width:70vw;
-  padding-bottom: 150px;
+  color:#14213D;
+  border-radius: 5px;
+  border: 3.5px solid #14213D;
+  background: #E5E5E5;
+  font-family:'Oswald', sans-serif ;
+  margin: 50px auto;
+  width:65vw;
+  padding: 45px;
+  padding-bottom: 120px;
 }
 form > h3{
   width:100%;
   border:none ;
   text-indent: none;
+  font-size: 40px;
   text-align: center;
 }
-input{
-  padding-left: 15px;
+form label{
+  font-family: 'Oswald', sans-serif;
+  display:block;
+  margin: 20px 0px;
+  font-size: 21px;
+}
+form input{
+  padding: 0px 15px;
   display: block;
   width:100%;
   height:50px;
+  border:2px solid #14213D;
 }
-label{
-  font-style: 'Oswald', sans-serif;
-  display:block;
-  margin:20px  0px;
+.submit-btn{
+  border:2px solid #14213D;
+  float:right;
+  margin-top:30px;
+  padding:10px 35px;
+  font-weight: bold;
+  font-size: 15px;
+}
+.submit-btn:hover{
+  background: #14213D;
+  color: #FCA311;
 }
 
-button{
-  margin-top: 50px;
-  width:150px;
-  float:right;
-  height: 35px;
+.footer{
+  display: flex;
+  /* background-color:#14213D ; */
+  height: 80px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  justify-content: center;
+}
+.page-number{
+  border:none;
+  background:  #14213D;
+  border-radius: 50%;
+  height: 40px;
+  width:40px;
+  color:#FCA311;
+  font-size: 16px;
+}
+.btn{
+  border:none;
+  border-radius: 50%;
+  height: 40px;
+  width:40px;
+}
+.btn:hover{
+  background-color: #14213D;
+  color:#FCA311;
+}
+a.fas.fa-pen.update-btn{
+  text-align: center;
+  line-height: 50px;
+}
+
+.update-btn, .delete-btn{
+  border:2px solid #14213D;
+  font-size: 20px;
+  color:#14213D;
+  height: 50px;
+  width: 50px;
+  border-radius: 2px;
+  margin:0px 2px;
+}
+.update-btn:hover, .delete-btn:hover{
+  background: #14213D;
+  color:#FCA311;
 }
